<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/show_color">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/_10sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_30sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_10sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/guys_task"
                android:textColor="@color/navy_blue"
                android:drawablePadding="@dimen/_5sdp"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:drawableStart="@drawable/ic_color_ecllipse"
                android:fontFamily="@font/dm_sans_400"
                android:textSize="@dimen/_11sdp" />


        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:src="@drawable/ic_up_left"
            app:layout_constraintTop_toTopOf="@id/cardView"
            app:layout_constraintStart_toEndOf="@id/cardView" />


        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_sans_700"
            android:text="@string/see_all"
            android:textColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/arrow"
            app:layout_constraintStart_toStartOf="@id/arrow" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:fontFamily="@font/dm_sans_700"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/_30sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <TextView
            android:id="@+id/ctaNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:background="@drawable/green_curve_bg"
            android:fontFamily="@font/dm_sans_700"
            android:gravity="center_horizontal"
            android:paddingHorizontal="@dimen/_30sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>